--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -12,12 +12,12 @@
 
 .about__content {
   display: flex;
-  align-items: center;
   margin-left: 60px;
 
   @include vp-1199 {
     margin-left: 0;
     flex-direction: column;
+    align-items: center;
   }
 
   picture,
@@ -29,6 +29,7 @@
     }
 
     @include vp-767 {
+      display: block;
       width: 100vw;
       height: 313px;
       object-fit: cover;
@@ -41,9 +42,9 @@
   position: relative;
   flex: 1 1;
   margin-right: 85px;
-  min-width: 290px;
+  min-width: 270px;
   max-width: 355px;
-  margin-top: 10px;
+  margin-top: 39px;
 
   @include vp-1199 {
     text-align: center;
@@ -129,7 +130,7 @@
 
 .about__video {
   position: absolute;
-  bottom: -115px;
+  top: 288px;
   left: -63px;
 
   @include vp-1199 {
@@ -143,7 +144,6 @@
     bottom: 0;
     left: 0;
     transform: none;
-    width: 100vw;
     margin-top: 40px;
   }
 
@@ -165,10 +165,12 @@
 }
 
 .about__video-img {
-  img {
+  img,
+  picture {
     @include vp-767 {
       height: auto;
       max-height: 404px;
+      width: 100vw;
     }
   }
 
@@ -226,7 +228,7 @@
     content: "";
     top: -14px;
     left: -14px;
-    background-image: url("/img/svg/circle.svg");
+    background-image: url("../../img/svg/circle.svg");
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100px;
