--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -15,8 +15,14 @@
 .header__wrapper {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
   width: 100%;
   align-items: flex-start;
+
+  @include vp-767 {
+    gap: 10px;
+  }
 }
 
 .header__logotype {
