--- a/source/sass/blocks/introducing.scss
+++ b/source/sass/blocks/introducing.scss
@@ -122,8 +122,9 @@
   }
 
   @include vp-767 {
-    bottom: 32px;
-    left: -63px;
+    position: static;
+    margin-top: -95px;
+    margin-left: -64px;
   }
 
   p {
@@ -146,7 +147,7 @@
   }
 
   @include vp-767 {
-    margin-top: 22px;
+    margin-top: 54px;
     margin-bottom: 79px;
     width: 100%;
     min-width: 290px;
