--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -228,7 +228,7 @@
     content: "";
     top: -14px;
     left: -14px;
-    background-image: url("../../img/svg/circle.svg");
+    background-image: url("/../../img/svg/circle.svg");
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100px;
