--- a/source/sass/blocks/introducing.scss
+++ b/source/sass/blocks/introducing.scss
@@ -8,23 +8,30 @@
   );
 
   width: 100%;
+  padding-bottom: 51px;
+
+  @include vp-1199 {
+    padding-bottom: 1px;
+  }
 }
 
 .introducing__wrapper {
   display: flex;
-  margin-left: 98px;
+  margin: -23px 0 0 98px;
 
   @include vp-1199 {
     justify-content: space-between;
     margin-left: 90px;
+    margin-top: -58px;
   }
 
   @include vp-767 {
     margin-left: 0;
+    margin-top: -39px;
   }
 
   img {
-    margin: 51px 0;
+    margin: 0;
 
     @include vp-1199 {
       margin: 82px 0;
@@ -39,7 +46,7 @@
 .introducing__inner {
   text-align: right;
   margin-right: 64px;
-  margin-top: 162px;
+  margin-top: 111px;
 
   @include vp-1199 {
     margin-right: 30px;
